<resources>
    <string name="app_name">Go getters Daily motivation </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_favorites">Favorites</string>

    //URL
    <string name="privacy_policy_url">https://privacypolicies.com/privacy/view/c51c78f03631c7591d817e9d0c30c84c</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=Ymg</string>

    //ads
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_sdk_key">x5ImfykxaMWs-ntpF6fuNGlFBtC9zBJuGcewTMs8kN_h9sVOz9HLQ0abtnmqy4iDgM8Ek_MRML7WCdv123456</string>

    //setting screen
    <string name="terms_amp_condition">Permission Required</string>
    <string name="tv_decline_policy">Later</string>
    <string name="permission_use_text">"Don't worry. This is standard permission and Best Quotes &amp; Status would not be use the access for any other use than mentioned."</string>
    <string name="media_and_storage">Media &amp; Storage</string>
    <string name="needed_access">Go getters Daily Inspiration  needs access to following</string>
    <string name="access_download_videos">Allowing Go getters Daily Inspiration to access your gallery &amp; files enables you to store photos</string>
    <string name="cv_accept_policy">Give Permission</string>
    <string name="quote_maker">Quotes Maker</string>
    <string name="version_label">Version Label</string>
    <string name="title_darkmode">Dark Mode</string>
    <string name="check_update">Check Update</string>
    <string name="description_subsribte">With our App , You can Enjoy ad free experience and focus on the essential</string>
    <string name="storage">Quotes Save Location</string>
    <string name="storagelocation">Internal Storage/</string>
    <string name="title_notification">Push Notification</string>
    <string name="label_notification">Want Wallpaper Notifications from </string>
    <string name="policy_privacy">Privacy Policy</string>

    //extras
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="copy_msg">Quotes Copied !</string>
    <string name="quote_of_day">Quote of the Day</string>

    //about us
    <string name="about_us">Go getters Daily inspiration is a quotes app for you in your all states. Get 10000+ Status and Quotes with Images</string>
    <string name="version">Version - 1.0</string>
    <string name="more_app">More Apps from Inspire4444</string>
    <string name="close">Close</string>

</resources>