<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00ffff00"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        android:orientation="vertical"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About us"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:alpha="0.5"/>

            <ImageView
                android:id="@+id/animationView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="10dp"/>

            <TextView android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/version"
                android:textAlignment="center"/>

            <TextView android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_us"
                android:lines="4"
                android:minLines="3"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/btnMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_app"
                    android:background="@drawable/bg_button_background"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#2F3345"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/btnClose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:background="@drawable/bg_button_background"
                    android:padding="10dp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>